Fixed headers on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2497,7 +2497,7 @@
 					}
 
 				.box.style2 header {
-					padding: 0em;
+					padding: 1em;
 				}
 
 				.box.style2 .inner {
